# ridervision

./: README.md  data.json  docker-compose.yml  install-docker.sh  package-lock.json
rv-api/: .env  .pylintrc  Dockerfile  diagram.puml  pre-commit-config.yaml  pyproject.toml
rv-api/src/: .gitignore  celerybeat-schedule  db.sqlite3  manage.py
rv-api/src/core/: admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
rv-api/src/core/migrations/: 0001_initial.py  0002_alter_show_show_img_banner_alter_show_show_img_logo_and_more.py  0002_alter_user_img_alter_user_username.py  0002_review_unique_review_per_show_per_user.py  0003_alter_rider_name_alter_show_show_img_banner_and_more.py  0003_show_alter_user_img_user_favorite_shows.py  0004_remove_user_favorite_riders_and_more.py  0004_rider_user_favorite_riders_riderform.py  0005_alter_show_name.py  0005_post_comment.py  0006_alter_user_favorite_riders_alter_user_favorite_shows.py  0007_alter_show_show_img_sm_alter_show_show_img_xg.py  0008_alter_rider_rider_img_body_alter_rider_rider_img_sm.py  0009_alter_post_img.py  0010_rider_rider_img_logo_delete_riderform.py
rv-api/src/core/models/: comment.py  post.py  rider.py  show.py  user.py
rv-api/src/core/serializers/: riderSerializer.py
rv-api/src/core/utils/: get_meta_name.py  upload_img.py
rv-api/src/core/views/: riderView.py
rv-api/src/fixtures/: riders.json  shows.json
rv-api/src/rv/: .env  .env.example  asgi.py  celery.py  settings.py  urls.py  wsgi.py
rv-api/src/rv/core/models/: comment.py  rider.py  user.py
rv-app/: Dockerfile  README.md  angular.json  db.json  package-lock.json  package.json  run_json_server.sh
rv-app/src/: index.html  main.ts  styles.sass
rv-app/src/app/: app.component.html  app.component.sass  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
rv-app/src/app/core/directives/: card-content.directive.ts  card-header.directive.ts  card-poster.directive.ts
rv-app/src/app/core/guards/: auth.guard.ts  login.guard.ts  logout.guard.ts
rv-app/src/app/core/interceptors/: token.interceptor.ts
rv-app/src/app/core/interfaces/: comment.ts  link-menu.ts  rider.ts  show.ts  user.ts
rv-app/src/app/core/pipes/: age.pipe.ts  era.pipe.ts  security-menu.pipe.ts  short-name.pipe.ts
rv-app/src/app/core/services/: comment.service.ts  post.service.ts  review.service.ts  rider.service.ts  series.service.ts  users.service.ts
rv-app/src/app/pages/api-page/: api-page.component.html  api-page.component.sass  api-page.component.spec.ts  api-page.component.ts
rv-app/src/app/styles/: _animation.sass  _colors.sass  _fonts.sass  _margin.sass  _reset.sass  _variables.sass
scrappers/: data.json  edit.py  main_show.py  pyproject.toml  renders.py  rider.py  testing_scrapper.py  texts.txt
scrappers/show/: app.py  main.py  model.py  models.py  parse.py  riders.json  shows.json  soup.py  utils.py
(+132 files in other folders)
