[project]
name = "rv-api"
version = "0.1.0"
description = ""
authors = [
    {name = "santivgo",email = "requiemsantiago@gmail.com"},
    {name = "alyssonhenri",email = "alyssonhenrique000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djoser (>=2.3.1,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "celery (>=5.3.6,<6.0.0)",
    "django-celery-beat (>=2.6.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "poetry", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.7"
pylint-django = "^2.6.1"
taskipy = "^1.14.1"
pre-commit = "^4.2.0"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
qos = { cmd ="black src & isort src & pylint src", help="Executa todas as ferramentas de qualidade de código"}

[FORMAT]
max-line-length=88
